# Game

./: .gitignore  README.md
2048/: CMakeLists.txt  README.md
2048/src/: app.cpp  app.h  app.ixx  game.cpp  game.h  game.ixx  main.cpp  renderer.cpp  renderer.h  renderer.ixx
Bird/: CMakeLists.txt  README.md
Bird/.trae/skills/cpp-style-guide/: SKILL.md
Bird/.trae/skills/sdl3-game-dev/: SKILL.md
Bird/src/: Audio.cpp  Audio.h  Background.cpp  Background.h  Bird.cpp  Bird.h  Button.cpp  Button.h  Config.h  Game.cpp  Game.h  Ground.cpp  Ground.h  Pipe.cpp  Pipe.h  Score.cpp  Score.h  UI.cpp  UI.h  main.cpp
minesweeper/: CMakeLists.txt
minesweeper/src/: board.cpp  board.hpp  difficulty.hpp  game.cpp  game.hpp  gameoverstate.cpp  gameoverstate.hpp  gamestate.hpp  main.cpp  menustate.cpp  menustate.hpp  playingstate.cpp  playingstate.hpp  render_text.hpp
pacman/: CMakeLists.txt
pacman/docs/: design.md
pacman/src/: game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  resource.cpp  resource.hpp
pacman/src/logic/: collision.cpp  collision.hpp  ghost_ai.cpp  ghost_ai.hpp  stage_controller.cpp  stage_controller.hpp
pacman/src/model/: ghost.hpp  map.cpp  map.hpp  maps.hpp  player.hpp  score.hpp  stage.hpp  types.hpp
pacman/src/view/: hud_renderer.cpp  hud_renderer.hpp  level_select_renderer.cpp  level_select_renderer.hpp  menu_renderer.cpp  menu_renderer.hpp  stage_renderer.cpp  stage_renderer.hpp
snake/: CMakeLists.txt  README.md  main.cpp
star-battle/: CMakeLists.txt  README.md
star-battle/.trae/skills/SDL3-dev-standards/: SKILL.md
star-battle/.trae/skills/cpp-dev-standards/: SKILL.md
star-battle/src/: main.cpp  pch.hpp  star_battle_game.cpp  star_battle_game.hpp
star-battle/src/core/: audio.cpp  audio.hpp  game.cpp  game.hpp  renderer.cpp  renderer.hpp  sdl_deleter.hpp  window.cpp  window.hpp
star-battle/src/game/: bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  friendly.cpp  friendly.hpp  fuel.cpp  fuel.hpp  planet.cpp  planet.hpp  player.cpp  player.hpp  star.cpp  star.hpp
star-battle/src/ui/: hud.cpp  hud.hpp  menu.cpp  menu.hpp
sudoku/: CMakeLists.txt
sudoku/src/: board.cpp  board.h  board.hpp  cell.hpp  game.cpp  game.h  input.cpp  input.hpp  main.cpp  renderer.cpp  renderer.h  renderer.hpp  scene.cpp  scene.hpp
tetris/: CMakeLists.txt  README.md
tetris/src/: board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  renderer.cpp  renderer.hpp  tetromino.cpp  tetromino.hpp  types.hpp
